--- a/index.html
+++ b/index.html
@@ -3,37 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Template</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Admin and Faculty Cards</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Optional Icon Library (Offline Example) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="w-full max-w-md bg-white rounded-lg shadow-md p-6">
-        <h2 class="text-2xl font-bold text-gray-800 text-center">Login</h2>
-        <form class="mt-6">
-            <div class="mb-4">
-                <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                <input type="email" id="email" class="w-full mt-1 px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Enter your email" required>
-            </div>
-
-            <div class="mb-4">
-                <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
-                <input type="password" id="password" class="w-full mt-1 px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Enter your password" required>
-            </div>
-
-            <div class="flex items-center justify-between mb-4">
-                <div class="flex items-center">
-                    <input id="remember-me" type="checkbox" class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
-                    <label for="remember-me" class="ml-2 block text-sm text-gray-800">Remember me</label>
+<body class="bg-light">
+<div class="d-flex vh-100 align-items-center justify-content-center">
+    <div class="row g-4">
+        <!-- Admin Card -->
+        <div class="col-md-6 d-flex justify-content-center">
+            <div class="card text-center shadow" style="width: 18rem;">
+                <div class="card-body">
+                    <div class="icon mb-3">
+                        <i class="fas fa-user-shield fa-3x text-primary"></i>
+                    </div>
+                    <h5 class="card-title">Admin</h5>
+                    <a href="admin.php" class="btn btn-primary">Login As Admin</a>
                 </div>
-                <a href="#" class="text-sm text-blue-500 hover:underline">Forgot password?</a>
             </div>
-
-            <button type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
-                Login
-            </button>
-        </form>
-
-
+        </div>
+        <!-- Faculty Card -->
+        <div class="col-md-6 d-flex justify-content-center">
+            <div class="card text-center shadow" style="width: 18rem;">
+                <div class="card-body">
+                    <div class="icon mb-3">
+                        <i class="fas fa-chalkboard-teacher fa-3x text-success"></i>
+                    </div>
+                    <h5 class="card-title">Faculty</h5>
+                    <a href="teacher.php" class="btn btn-success">Login As Teacher</a>
+                </div>
+            </div>
+        </div>
     </div>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
