--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Optional Icon Library (Offline Example) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-<body class="bg-light">
+<body class="bg-dark">
 <div class="d-flex vh-100 align-items-center justify-content-center">
     <div class="row g-4">
         <!-- Admin Card -->
